# CppFileUploader

./: CMakeLists.txt  README.md  config.json  file_uploader
TestFiles/: test.txt  test1.txt
src/: ApiClient.cpp  ApiClient.h  Config.cpp  Config.h  Queue.cpp  Queue.h  Request.h  Token.cpp  Token.h  User.cpp  User.h  UserManager.cpp  UserManager.h  main.cpp
